에타, 시간표 서비스 테스트 작성완료